Started introduction. Added some formatting to pdf chapter outlines

--- a/Introduccion/Introduccion.tex
+++ b/Introduccion/Introduccion.tex
@@ -1,3 +1,5 @@
 \chapter{Introducción}
 
-Las variables cataclísmicas son un tipo de sistemas binarios. 
+Las variables cataclísmicas son un tipo de sistemas binarios, compuestos de una estrella enana blanca y una estrella de secuencia principal. Para que un sistema binario sea considerado como una variable cataclísmica debe demostrar ciertos comportamientos, el más importante viene siendo una variación en su luminosidad periódica. No todas las variables cataclísmicas demuestran el mismo comportamiento; sus periodos de intensa actividad y el subsecuente periodo de atenuación pueden variar en su duración y la magnitud. El mecanismo que genera esta variación se les conoce como \textit{novae}; estos estallidos ocurren debido a la interacción de las estrellas dentro del sistema.
+\\\newline
+La composición de las estrellas puede variar de un sistema a otro, pero en general adhieren a los siguientes parámetros: una estrella enana blanca - conocida como la estrella principal - y una estrella de secuencia principal menos densa - la estrella secundaria. Esta estrella secundaria es más roja que la principal; su espectro de emisión cae en la región roja, llegando hasta el infra-rojo en ciertos cases.
