Really rough draft of intro, wrote about basics of CVs. Added more references and graphics figure

--- a/ref.bib
+++ b/ref.bib
@@ -1,5 +1,17 @@
 @article{smithReview,
-	author="Robert Connon Smith",
-	title="Cataclysmic variables",
-	year="2007"
+  author          = {"Robert Connon Smith"},
+  journal         = {},
+  number          = {},
+  title           = {"Cataclysmic Variables"},
+  volume          = {},
+  year            = {2007}
+}
+
+@article{disentanglingGaiaHR,
+  author          = {"Javier Abril", "Linda Schmidtobreick", "Alessandro Ederoclite", "Carlos López-Sanjuan},
+  journal         = {},
+  number          = {},
+  title           = {"Disentangling Cataclysmic Variables in Gaia’s HR-Diagram"},
+  volume          = {},
+  year            = {2019}
 }
