Added info on CV novae

--- a/Introduccion/Introduccion.tex
+++ b/Introduccion/Introduccion.tex
@@ -12,10 +12,10 @@ Al cruzar el lóbulo de Roche de la estrella secundaria, la materia perdida no p
 	\end{center}
 
 	\begin{center}
-		\caption{Diagrama de una estrella enana blanca absorbiendo material de su compañera estrella de secuencia principal por medio de la interacción de sus lóbulos de Roche.}
+		\caption{Diagrama de una estrella enana blanca absorbiendo material de su compañera estrella de secuencia principal por medio de la interacción de sus lóbulos de Roche.} \cite*{smithReview}
 	\end{center}
 	\label{acrecion_smith_review}
 \end{figure}
 Todas las variables cataclísmicas han obtenido su nombre debido a sus cambios rápidos en sus propiedades durante periodos de observación. El mecanismo principal que causa estas variaciones se debe a los estallidos periódicos, conocidos como \textit{novae}. Al igual como no todos los sistemas muestran las mismas propiedades en sus componentes existen diferentes tipos de estallidos: \textit{novae clásicos}, \textit{novae enanos}, y \textit{nova-like}. \cite*{smithReview} 
 \\\newline
-Los novae clásicos son aquellos estallidos observados en sistemas binarios que causa que su luminosidad aumente por varias magnitudes en una escala de tiempo relativamente corta (puede ser en la escala de días hasta meses). \cite*{smithReview} Aparte de radiación los novae expulsan un entorno de gas caliente a grandes velocidades, llegando a miles de kilómetros por segundo. Pocos sistemas muestran nova recurrentes a lo largo del tiempo en intervalos de decenas o cientos de años; la mayoría solo ha mostrado un solo estallido en nuestro record histórico. 
+Los novae clásicos son aquellos estallidos observados en sistemas binarios que causa que su luminosidad aumente por varias magnitudes en una escala de tiempo relativamente corta (puede ser en la escala de días hasta meses). \cite*{smithReview} Aparte de la radiación generada debido a reacciones termonucleares, los novae expulsan un entorno de gas caliente a grandes velocidades, llegando a miles de kilómetros por segundo. Pocos sistemas binarios muestran nova recurrentes a lo largo del tiempo en intervalos de decenas o cientos de años; la mayoría ha mostrado un solo estallido en su tiempo de observación. En sistemas no magnéticos, el disco de acreción sirve como el motor principal de estos estallidos. La mayoría del material en el disco es hidrógeno; este crea una capa en la superficie de la enana blanca. A lo largo de lo que se acumula este material aumente su grosor, aumentando la temperatura de la capa. Este aumento de temperatura causa que la presión en esta capa alcance un punto en donde empiezan a ocurrir reacciones termonucleares de parte del hidrógeno presente en esta capa. 
