--- a/main.tex
+++ b/main.tex
@@ -1,18 +1,186 @@
-\documentclass{report}
+% \documentclass{report}
 
-\usepackage{graphicx}
+% \usepackage{graphicx}
 
-\usepackage{biblatex}
-\addbibresource{ref.bib}
+% \usepackage[
+% 	backend=biber,
+% 	style=numeric,
+% 	citestyle=authoryear
+% ]{biblatex}
+% \addbibresource{ref.bib}
 
-\usepackage[pagestyles]{titlesec}
-\titleformat{\chapter}[display]{\normalfont\bfseries}{}{0pt}{\Huge}
-\newpagestyle{mystyle}
-{\sethead[\thepage][][\chaptertitle]{}{}{\thepage}}
-\pagestyle{mystyle}
+% \usepackage[pagestyles]{titlesec}
+% \titleformat{\chapter}[display]{\normalfont\bfseries}{}{0pt}{\Huge}
+% \newpagestyle{mystyle}
+% {\sethead[\thepage][][\chaptertitle]{}{}{\thepage}}
+% \pagestyle{mystyle}
+
+% \title{Estudio Fotométrico de Variables Cataclísmicas}
+% \begin{document}
+% 	\include{Introduccion/Introduccion.tex}
+
+% 	\printbibliography
+% \end{document}
+
+\documentclass[12pt,a4paper]{report}
+
+\usepackage{geometry}
+\usepackage{float}
+\usepackage{titlesec}
+\usepackage{amssymb,amsmath}
+\usepackage[]{graphicx} \graphicspath{ {Fig/} }
+\usepackage{caption}
+\usepackage[]{xcolor}
+\usepackage{booktabs, multirow}
+\usepackage[colorlinks,linkcolor=black,urlcolor=blue,citecolor=gray]{hyperref}
+\usepackage{natbib}
+\usepackage{url}
+
+\usepackage[spanish, english]{babel}  %%% !!! Cancellare 'english' per avere "Sommario, Capitolo..." !!!
+
+%------------------------------------------------------------------------------------
+\newcommand{\eg}{\`e}
+\newcommand{\ea}{\'e}
+\newcommand{\Eg}{\`E}
+\newcommand{\og}{\`o}
+\newcommand{\ag}{\`a}
+\newcommand{\ug}{\`u}
+\newcommand{\ig}{\`{\i}}
+\newcommand{\R}{\textsf{R}}
+\newcommand{\Fortran}{\textsf{Fortran}}
+%------------------------------------------------------------------------------------
+\definecolor{MyGray}{rgb}{0.30,0.31,0.32} % definizione grigio
+\definecolor{MyDarkBlue}{rgb}{0.,0.08,0.5} % blu scuro
+\definecolor{MyLightBlue}{rgb}{0.2,0.2,1.0} % blu chiaro
+\definecolor{MyDarkRed}{rgb}{0.5,0.04,0} % rosso scuro
+\definecolor{MyDarkGreen}{rgb}{0.0,0.4,0.08} % verde scuro
+\definecolor{SectionBlue}{rgb}{0.16,0.32,0.75} % blu per sezioni
+\definecolor{SubSectionBlue}{rgb}{0.0,0.53,0.74} % blu per sottosezioni
+\definecolor{SubSubSectionBlue}{rgb}{0.0,0.58,0.65} % blu per sottosottosezioni
+%------------------------------------------------------------------------------------
+\titleformat{\chapter}[display]
+  {\color{SectionBlue}\normalfont\LARGE\bfseries}{\chaptertitlename\ \thechapter}{20pt}{\Huge}
+\titleformat{\section}
+{\color{SectionBlue}\normalfont\Large\bfseries}
+{\color{SectionBlue}\thesection}{1em}{}
+\titleformat{\subsection}
+{\color{SubSectionBlue}\normalfont\Large\bfseries}
+{\color{SubSectionBlue}\thesubsection}{1em}{}
+\titleformat{\subsubsection}
+{\color{SubSubSectionBlue}\normalfont\large\bfseries}
+{\color{SubSubSectionBlue}\thesubsubsection}{1em}{}
+\DeclareCaptionFont{myblue}{\color{SubSectionBlue}}
+\captionsetup{labelfont={myblue,bf}}
+%------------------------------------------------------------------------------------
+\newcommand{\myboldverb}[1]{{\color{MyDarkBlue}\bfseries{#1}}} % per enfasi in grassetto 
+\newcommand{\myverb}[1]{{\color{MyDarkBlue}\texttt{#1}}} % in evidenza
+\newcommand{\myurl}[1]{{\color{MyDarkGreen}\url{#1}}} % per url
+\newcommand{\quotesection}[1]{{\color{SectionBlue}\textbf{Sezione \ref{#1}}}}
+\newcommand{\quotesubsection}[1]{{\color{SubSectionBlue}\textbf{Sezione \ref{#1}}}}
+\newcommand{\quotesubsubsection}[1]{{\color{SubSubSectionBlue}\textbf{Sezione \ref{#1}}}}
+\newcommand{\quotefigure}[1]{{\color{MyDarkGreen}\textbf{Figura \ref{#1}}}}
+\newcommand{\quotetable}[1]{{\color{MyDarkGreen}\textbf{Tabella \ref{#1}}}}
+%------------------------------------------------------------------------------------
+\geometry{
+	paper=a4paper, % Change to letterpaper for US letter
+	inner=2.5cm, % Inner margin
+	outer=3cm, % Outer margin
+	bindingoffset=0.5cm, % Binding offset
+	top=2.5cm, % Top margin
+	bottom=3cm, % Bottom margin
+	%showframe, % Uncomment to show how the type block is set on the page
+}
+
+
+%------------------------------------------------------------------------------------
+%------------------------------ HERE WE GO ------------------------------------------
+%------------------------------------------------------------------------------------
+
 
 \begin{document}
-	\include{Introduccion/Introduccion.tex}
+\title{Estudio Fotométrico de Variables Cataclísmicas}
+\author{Ramón Caballero Villegas}
+% \date{19th July 2017}
 
-	\printbibliography
+%----------------------------- Frontispiece
+\newgeometry{margin=0.8in}
+\begin{titlepage}
+    \begin{center}
+        \vspace*{0.2cm}
+        {\fontsize{19pt}{20pt}\selectfont \textbf{Alma Mater Studiorum - Universit{\ag} di Bologna}\par}
+    
+        \noindent\hrulefill
+        \vspace{0.8cm}
+        
+        \Large
+        
+        Dipartimento di Fisica e Astronomia
+        
+        Corso di Laurea in Astronomia
+        
+        \Large
+        \vspace{5cm}
+        {\fontsize{22.5pt}{22.5}\textcolor{MyDarkBlue}{\textbf{Estudio Fotométrico de Variables Cataclísmicas}}}
+
+        
+        \vspace{1cm}
+        {\fontsize{16pt}{16pt}Tesis de Maestría}
+        
+        \vspace{4.5cm}
+        \begin{minipage}[t]{0.34\textwidth}
+        \begin{flushleft}
+        {\fontsize{16pt}{16pt}Presentada por: \\ \textbf{\textcolor{MyDarkBlue}{Ramón Caballero Villegas}}}
+        \end{flushleft}
+        \end{minipage}
+        \begin{minipage}[t]{0.64\textwidth}
+        \begin{flushright} \Large
+        Asesor: \\
+        \textbf{\textcolor{MyDarkBlue}{Chiar.mo Prof.}} 
+		\\\textbf{\textcolor{MyDarkBlue}{Name}} 
+        \end{flushright}
+        \end{minipage}\\
+        
+        \vfill
+        \noindent\hrulefill
+        \vspace{0.3cm}
+        \Large
+        
+        Appello {\textcolor{MyDarkBlue} {I}} 
+        
+        Año Académico {\textcolor{MyDarkBlue} {2021-2023}}
+    \end{center}
+\end{titlepage}
+\restoregeometry
+\vspace*{5cm}
+\begin{flushright}
+  {\parbox{4.2cm}{\textit{Dedication...}}}
+\end{flushright}
+
+\thispagestyle{empty}
+%\newpage
+%-------------------------------------ABSTRACT
+%\thispagestyle{empty}
+\vspace*{5cm}
+\renewcommand{\abstractname}{\color{MyDarkBlue}{Abstract}} 
+\begin{abstract}
+	TODO: abstract
+\end{abstract}
+%-------------------------------------INDEX
+\setcounter{page}{1}
+\pagenumbering{roman}
+\tableofcontents{}
+%\vspace*{2cm}
+%\setcounter{page}{1}
+%\pagenumbering{arabic}
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Chapter 1
+\include{Introduccion/Introduccion.tex}
+
+
+%-------------------------------------REFERENCES
+% \nocite{*}
+\bibliographystyle{mnras}
+\bibliography{ref.bib}
+
 \end{document}
