Modified main doc styling; page numbers are now arabic numerals. Wrote some of thesis title page. Cleaned up bibliography file.

--- a/ref.bib
+++ b/ref.bib
@@ -1,17 +1,11 @@
 @article{smithReview,
   author          = {"Robert Connon Smith"},
-  journal         = {},
-  number          = {},
   title           = {"Cataclysmic Variables"},
-  volume          = {},
   year            = {2007}
 }
 
 @article{disentanglingGaiaHR,
-  author          = {"Javier Abril", "Linda Schmidtobreick", "Alessandro Ederoclite", "Carlos López-Sanjuan},
-  journal         = {},
-  number          = {},
+  author          = {"Javier Abril and Linda Schmidtobreick and Alessandro Ederoclite and Carlos López-Sanjuan"},
   title           = {"Disentangling Cataclysmic Variables in Gaia’s HR-Diagram"},
-  volume          = {},
   year            = {2019}
 }
