--- a/main.tex
+++ b/main.tex
@@ -34,6 +34,7 @@
 \usepackage{booktabs, multirow}
 \usepackage[colorlinks,linkcolor=black,urlcolor=blue,citecolor=gray]{hyperref}
 \usepackage{natbib}
+\bibliographystyle{abbrvnat}
 \usepackage{url}
 
 \usepackage[spanish, english]{babel}  %%% !!! Cancellare 'english' per avere "Sommario, Capitolo..." !!!
@@ -167,11 +168,10 @@
 \end{abstract}
 %-------------------------------------INDEX
 \setcounter{page}{1}
-\pagenumbering{roman}
 \tableofcontents{}
 %\vspace*{2cm}
 %\setcounter{page}{1}
-%\pagenumbering{arabic}
+\pagenumbering{arabic}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Chapter 1
@@ -180,7 +180,7 @@
 
 %-------------------------------------REFERENCES
 % \nocite{*}
-\bibliographystyle{mnras}
-\bibliography{ref.bib}
+% \bibliographystyle{mnras}
+\bibliography{ref}
 
 \end{document}
