--- a/Introduccion/Introduccion.tex
+++ b/Introduccion/Introduccion.tex
@@ -2,7 +2,7 @@
 
 Las variables cataclísmicas son un tipo de sistemas binarios, compuestos de una estrella enana blanca y una estrella de secuencia principal. Este tipo de sistemas muestran comportamiento variable a lo largo del tiempo, en donde varía su luminosidad, espectro emitido, y otras propiedades del sistema. No todas las variables cataclísmicas demuestran un comportamiento uniforme; sus periodos de intensa actividad y el subsecuente periodo de atenuación pueden variar en su duración y su magnitud. El mecanismo que genera esta variación se les conoce como \textit{novae}; estos estallidos ocurren debido a la interacción de las estrellas dentro del sistema.
 \\\newline
-La composición de las estrellas puede variar de un sistema a otro, pero en general adhieren a los siguientes parámetros: una estrella enana blanca - conocida como la estrella principal - y una estrella de secuencia principal menos densa - la estrella secundaria. Esta estrella secundaria es más roja que la principal; su espectro de emisión tiende a la región roja, llegando hasta el infra-rojo en ciertos casos. Tomando en cuenta el sistema completo, se puede observar en la distribución de variables cataclísmicas en el diagrama Hertzsprung-Russell que la mayoría reside entre las regiones de enanas blancas y la secuencia principal dependiendo de la contribución relativa de sus estrellas componentes. \cite*{disentanglingGaiaHR} No siempre ocurre algún tipo de interacción entre las estrellas componentes dentro del sistema; esto va a depender de los volúmenes de las estrellas y la distancia entre ellas, ya que la manera principal en que interactúan entre si es en base a su atracción gravitacional. Entre más cerca de una a otra las fuerzas gravitacionales empiezan a distorsionar la secundaria hasta tener una forma más plana y menos uniforme. Este volumen, llamado el lóbulo de Roche, es la región de espacio en donde la estrella puede mantener a su material atrapada por su gravedad. En un sistema binario cada estrella tiene un lóbulo de Roche definido, los cuales están en contacto uno con el otro. Un ejemplo simple se puede ver en la figura~\ref{acrecion_smith_review}, donde la estrella secundaria ha llenado su volumen y su material empieza a caer hacia la enana blanca debido a su atracción gravitacional.
+La composición de las estrellas puede variar de un sistema a otro, pero en general adhieren a los siguientes parámetros: una estrella enana blanca - conocida como la estrella principal - y una estrella de secuencia principal menos densa - la estrella secundaria. Esta estrella secundaria es más roja que la principal; su espectro de emisión tiende a la región roja, llegando hasta el infra-rojo en ciertos casos. Tomando en cuenta el sistema completo, se puede observar en la distribución de variables cataclísmicas en el diagrama Hertzsprung-Russell que la mayoría reside entre las regiones de enanas blancas y la secuencia principal dependiendo de la contribución relativa de sus estrellas componentes. \citet{disentanglingGaiaHR} No siempre ocurre algún tipo de interacción entre las estrellas componentes dentro del sistema; esto va a depender de los volúmenes de las estrellas y la distancia entre ellas, ya que la manera principal en que interactúan entre si es en base a su atracción gravitacional. Entre más cerca de una a otra las fuerzas gravitacionales empiezan a distorsionar la secundaria hasta tener una forma más plana y menos uniforme. Este volumen, llamado el lóbulo de Roche, es la región de espacio en donde la estrella puede mantener a su material atrapada por su gravedad. En un sistema binario cada estrella tiene un lóbulo de Roche definido, los cuales están en contacto uno con el otro. Un ejemplo simple se puede ver en la figura~\ref{acrecion_smith_review}, donde la estrella secundaria ha llenado su volumen y su material empieza a caer hacia la enana blanca debido a su atracción gravitacional.
 \\\newline
 Al cruzar el lóbulo de Roche de la estrella secundaria, la materia perdida no puede caer directo a la superficie de la enana blanca a ser absorbida inmediatamente. Esto se debe al momento angular de las estrellas, tanto por su rotación como su órbita alrededor de su estrella compañera. Por lo tanto, al cruzar el punto de contacto entre los lóbulos (este conocido como el punto Lagrangiano L1) el material tiene una componente de velocidad tangente a la dirección a la enana blanca. A lo largo de que el material se empieza a acumular toma una forma dependiendo de las propiedades magnéticas de la enana blanca. En un sistema donde no ejerce un efecto significativo un campo magnético, el material forma un \textit{disco de acreción} alrededor de la enana blanca. Este disco se concentra en el ecuador de esta misma estrella, el cual empieza a emitir radiación en forma de líneas de emisión. Al contrario en un sistema magnético (llamados \textit{variables cataclísmicas magnéticas} o \textit{polares}) donde el campo magnético de la enana blanca es significativo el material no logra acumularse en un solo disco. Este material debido a ser un plasma ionizado tiene una carga eléctrica intrínseca, la cual la permite ser guiada por el campo magnético de la enana blanca a su destino final al polo magnético de esta misma estrella. 
 \\\newline
