--- a/main.tex
+++ b/main.tex
@@ -1,27 +1,3 @@
-% \documentclass{report}
-
-% \usepackage{graphicx}
-
-% \usepackage[
-% 	backend=biber,
-% 	style=numeric,
-% 	citestyle=authoryear
-% ]{biblatex}
-% \addbibresource{ref.bib}
-
-% \usepackage[pagestyles]{titlesec}
-% \titleformat{\chapter}[display]{\normalfont\bfseries}{}{0pt}{\Huge}
-% \newpagestyle{mystyle}
-% {\sethead[\thepage][][\chaptertitle]{}{}{\thepage}}
-% \pagestyle{mystyle}
-
-% \title{Estudio Fotométrico de Variables Cataclísmicas}
-% \begin{document}
-% 	\include{Introduccion/Introduccion.tex}
-
-% 	\printbibliography
-% \end{document}
-
 \documentclass[12pt,a4paper]{report}
 
 \usepackage{geometry}
@@ -32,9 +8,9 @@
 \usepackage{caption}
 \usepackage[]{xcolor}
 \usepackage{booktabs, multirow}
-\usepackage[colorlinks,linkcolor=black,urlcolor=blue,citecolor=gray]{hyperref}
+\usepackage[colorlinks,linkcolor=black,urlcolor=blue,citecolor=blue]{hyperref}
 \usepackage{natbib}
-\bibliographystyle{abbrvnat}
+\bibliographystyle{apalike}
 \usepackage{url}
 
 \usepackage[spanish, english]{babel}  %%% !!! Cancellare 'english' per avere "Sommario, Capitolo..." !!!
@@ -72,6 +48,7 @@
 {\color{SubSubSectionBlue}\thesubsubsection}{1em}{}
 \DeclareCaptionFont{myblue}{\color{SubSectionBlue}}
 \captionsetup{labelfont={myblue,bf}}
+\setcitestyle{authoryear, open={(},close={)}}
 %------------------------------------------------------------------------------------
 \newcommand{\myboldverb}[1]{{\color{MyDarkBlue}\bfseries{#1}}} % per enfasi in grassetto 
 \newcommand{\myverb}[1]{{\color{MyDarkBlue}\texttt{#1}}} % in evidenza
@@ -151,21 +128,23 @@
         Año Académico {\textcolor{MyDarkBlue} {2021-2023}}
     \end{center}
 \end{titlepage}
-\restoregeometry
-\vspace*{5cm}
-\begin{flushright}
-  {\parbox{4.2cm}{\textit{Dedication...}}}
-\end{flushright}
+% ------------------------------------DEDICATION
+% \restoregeometry
+% \vspace*{5cm}
+% \begin{flushright}
+%   {\parbox{4.2cm}{\textit{Dedication...}}}
+% \end{flushright}
 
-\thispagestyle{empty}
+% \thispagestyle{empty}
+% ------------------------------------
 %\newpage
 %-------------------------------------ABSTRACT
-%\thispagestyle{empty}
-\vspace*{5cm}
-\renewcommand{\abstractname}{\color{MyDarkBlue}{Abstract}} 
-\begin{abstract}
-	TODO: abstract
-\end{abstract}
+% \thispagestyle{empty}
+% \vspace*{5cm}
+% \renewcommand{\abstractname}{\color{MyDarkBlue}{Abstract}} 
+% \begin{abstract}
+% 	TODO: abstract
+% \end{abstract}
 %-------------------------------------INDEX
 \setcounter{page}{1}
 \tableofcontents{}
@@ -179,8 +158,6 @@
 
 
 %-------------------------------------REFERENCES
-% \nocite{*}
-% \bibliographystyle{mnras}
 \bibliography{ref}
 
 \end{document}
