--- a/ref.bib
+++ b/ref.bib
@@ -1,11 +1,11 @@
 @article{smithReview,
-  author          = {"Robert Connon Smith"},
-  title           = {"Cataclysmic Variables"},
-  year            = {2007}
+  author          = "Robert Connon Smith",
+  title           = "Cataclysmic Variables",
+  year            = 2007
 }
 
 @article{disentanglingGaiaHR,
-  author          = {"Javier Abril and Linda Schmidtobreick and Alessandro Ederoclite and Carlos López-Sanjuan"},
-  title           = {"Disentangling Cataclysmic Variables in Gaia’s HR-Diagram"},
-  year            = {2019}
+  author          = "Javier Abril and Linda Schmidtobreick and Alessandro Ederoclite and Carlos López-Sanjuan",
+  title           = "Disentangling Cataclysmic Variables in Gaia’s HR-Diagram",
+  year            = 2019
 }
