Changed doc language to Spanish

--- a/main.tex
+++ b/main.tex
@@ -12,8 +12,7 @@
 \usepackage{natbib}
 \bibliographystyle{apalike}
 \usepackage{url}
-
-\usepackage[spanish, english]{babel}  %%% !!! Cancellare 'english' per avere "Sommario, Capitolo..." !!!
+\usepackage[spanish]{babel}
 
 %------------------------------------------------------------------------------------
 \newcommand{\eg}{\`e}
