Reorganized to have subsections in intro

--- a/main.tex
+++ b/main.tex
@@ -153,7 +153,7 @@
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Chapter 1
-\include{Introduccion/Introduccion.tex}
+\input{Introduccion/Introduccion.tex}
 
 
 %-------------------------------------REFERENCES
