Split docs into multiple lines for ease of diff. Added extra subsection placeholders

--- a/Introduccion/Introduccion.tex
+++ b/Introduccion/Introduccion.tex
@@ -1,4 +1,5 @@
 \chapter{Introducción}
 
+\input{Introduccion/Subsecciones/SistemasBinarios.tex}
 \input{Introduccion/Subsecciones/VariablesCataclismicas.tex}
-\input{Introduccion/Subsecciones/Gaia.tex}
+% \input{Introduccion/Subsecciones/Gaia.tex}
