--- a/main.tex
+++ b/main.tex
@@ -113,7 +113,7 @@
         \begin{flushright} \Large
         Asesor: \\
         \textbf{\textcolor{MyDarkBlue}{Chiar.mo Prof.}} 
-		\\\textbf{\textcolor{MyDarkBlue}{Name}} 
+		\\\textbf{\textcolor{MyDarkBlue}{Dr. Andres Alberto Aviles Alvarado}} 
         \end{flushright}
         \end{minipage}\\
         
@@ -122,7 +122,7 @@
         \vspace{0.3cm}
         \Large
         
-        Appello {\textcolor{MyDarkBlue} {I}} 
+        Apelación {\textcolor{MyDarkBlue} {I}} 
         
         Año Académico {\textcolor{MyDarkBlue} {2021-2023}}
     \end{center}
@@ -153,10 +153,17 @@
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Chapter 1
-\input{Introduccion/Introduccion.tex}
+\include{Introduccion/Introduccion.tex}
 
 
 %-------------------------------------REFERENCES
 \bibliography{ref}
+% TODO: fix formatting for text
+This work has made use of data from the European Space Agency (ESA) mission
+{\it Gaia} (\url{https://www.cosmos.esa.int/gaia}), processed by the {\it Gaia}
+Data Processing and Analysis Consortium (DPAC,
+\url{https://www.cosmos.esa.int/web/gaia/dpac/consortium}). Funding for the DPAC
+has been provided by national institutions, in particular the institutions
+participating in the {\it Gaia} Multilateral Agreement.
 
 \end{document}
