--- a/ref.bib
+++ b/ref.bib
@@ -9,3 +9,12 @@
   title           = "Disentangling Cataclysmic Variables in Gaia’s HR-Diagram",
   year            = 2019
 }
+
+@article{gaiaCollaboration,
+  AUTHOR          = "T. Prusti and J.H.J. de Bruijne and A. Brown and A. Vallenari and C. Babusiaux and C.A.L. Bailer-Jones and U. Bastian and M. Biermann and D.W. Evans and L. Eyer and J. F. and C. Jordi and S.A. Klioner and U. Lammers and L. Lindegren and X. Luri and F. Mignard and D.J. Milligan and C. Panem and V. Poinsignon and D. Pourbaix and S. Randich and G. Sarri and P. Sartoretti and H.I. Siddiqui and C. Soubiran and V. Valette and F.  and N.A. Walton and C. Aerts and F. Arenou and M. Cropper and R. Drimmel and E. Høg and D. Katz and L. M.G. and W. O'Mullane and E.K. Grebel and A.D. Holland and C. Huc and X. Passot and L. Bramante and C. Cacciari and J. Castañeda and L. Chaoul and N. Cheek and F. De Angeli and R. Fabricius and J. Hernández and A. Jean-Antoine-Piccolo and E. Masana and R. Messineo and N. Mowlavi and K. Nienartowicz and D. Ordóñez-Blanco and P. Panuzzo and J. Portell and P.J. Richards and M. Riello and G.M. Seabroke and P. Tanga and F. Thévenin and J. Torra and S.G. Els and G. Gracia-Abril and Comoretto and M. Garcia-Reinaldos and T. Lock and E. Mercier and Altmann and R. Andrae and T.L. Astraatmadja and I. Bellas-Velidis and K. Benson and J. Berthier and R. Blomme and G. Busso and B. Carry and A. Cellino and G. Clementini and S. Cowell and O. Creevey and J. Cuypers and M. Davidson and J. De Ridder and A. de Torres and L. Delchambre and A. Dell’Oro and C. Ducourant and Frémat and M. García-Torres and E. Gosset and J.-L. Halbwachs and N.C. Hambly and D.L. Harrison and M. Hauser and D. Hestroffer and S.T. Hodgkin and H.E. Huckle and A. Hutton and G. Jasniewicz and S. Jordan and M. Kontizas and A.J. Korn and A.C. Lanzafame and M. Manteiga and A. Moitinho and K. Muinonen and J. Osinde and E. Pancino and T. Pauwels and J.-M. Petit and A. Recio-Blanco and A.C. Robin and L.M. Sarro and C. Siopis and M. Smith and K. Smith and A. Sozzetti and W. Thuillot and W. van Reeven and Y. Viala and U. Abbas and A. Abreu Aramburu and S. Accart and J.J. Aguado and P.M. Allan and W. Allasia and G. Altavilla and M. Álvarez and J. Alves and R.I. Anderson and A.H. Andrei and E. Anglada Varela and E. Antiche and T. Antoja and S. Antón and B. Arcay and A. Atzei and L. Ayache and N. Bach and S.G. Baker and L. Balaguer-Núñez and C. Barache and C. Barata and Barbier and F. Barblan and M. Baroni and D. Barrado y Navascués and M. Barros and M.A. Barstow and U. Becciani and M. Bellazzini and G. Bellei and A. Bello García and V. Belokurov and P. Bendjoya and A. Berihuete and L. Bianchi and O. Bienaymé and Billebaud and N. Blagorodnova and S. Blanco-Cuaresma and T. Boch and A. Bombrun and R. Borrachero and S. Bouquillon and G. Bourda and H. Bouy and A. Bragaglia and M.A. Breddels and N. Brouillet and T. Brüsemeister and B. Bucciarelli and F. Budnik and P. Burgess and R. Burgon and A. Burlacu and D. Busonero and R. Buzzi and E. Caffau and J. Cambras and H. Campbell and R. Cancelliere and T. Cantat-Gaudin and T. Carlucci and J.M. Carrasco and M. Castellani and P. Charlot and J. Charnas and P. Charvet and F. Chassat and A.  and M. Clotet and G. Cocozza and R.S. Collins and P. Collins and G. Costigan and F. Crifo and N.J.G. Cross and M. Crosta and C. Crowley and C. Dafonte and Y. Damerdji and A. Dapergolas and P. David and M. David and P. De Cat and F. de Felice and P. de Laverny and F. De Luise and R. De March and D. deMartino and R. de Souza and J. Debosscher and E. del Pozo and M. Delbo and A. Delgado and H.E. Delgado and F. di Marco and P. Di Matteo and S. Diakite and E. Distefano and C. Dolding and S. Dos Anjos and P. Drazinos and J. Durán and Y. Dzigan and E. Ecale and B. Edvardsson and H. Enke and M. Erdmann and D. Escolar and M. Espina and N.W. Evans and G. Eynard Bontemps and C. Fabre and M. Fabrizio and S. Faigler and A.J. Falcão and M. Farràs Casas and F. Faye and L. Federici and G. Fedorets and J. Fernández-Hernández and P. Fernique and A. Fienga and F. Figueras and F. Filippi and K. Findeisen and A. Fonti and E. Fouesneau and M. Fraser and J. Fuchs and R. Furnell and M. Gai and S. Galleti and L. Galluccio and D. Garabato and F. García-Sedano and P. Garé and A. Garofalo and N. Garralda and P. Gavras and J. Gerssen and R. Geyer and G. Gilmore and Girona and G. Giuffrida and M. Gomes and A. González-Marcos and J. González-Núñez and J.J. González-Vidal and M. Granvik and A. Guerrier and P. Guillout and J. Guiraud and A. Gúrpide and R. Gutiérrez-Sánchez and L.P. Guy and R. Haigron and D. Hatzidimitriou and M. Haywood and U. Heiter and A. Helmi and D. Hobbs and W. Hofmann and B. Holl and G. Holland and J.A. Hunt and A. Hypki and V. Icardi and M. Irwin and G. Jevardat de Fombelle and P. Jofré and P.G. Jonker and A. Jorissen and F. Julbe and A. Karampelas and A. Kochoska and R. Kohley and K. Kolenberg and E. Kontizas and S.E. Koposov and G. Kordopatis and P. Koubsky and A. Kowalczyk and A. Krone-Martins and M. Kudryashova and Kull and R.K. Bachchan and F. Lacoste-Seris and A.F. Lanza and J.-B. Lavigne and C. Le Poncin-Lafitte and Y. Lebreton and T. Lebzelter and S. Leccia and N. Leclerc and I. Lecoeur-Taibi and V. Lemaitre and H. Lenhardt and F. Leroux and S. Liao and E. Licata and H.E.P. Lindstrøm and T.A. Lister and E. Livanou and W. Lobel and M. López and A. Lopez-Lozano and D. Lorenz and T. Loureiro and I. MacDonald and T. Magalhães Fernandes and S.  and R.G. Mann and G. Mantelet and O. Marchal and J.M. Marchant and M. Marconi and J. Marie and S. Marinoni and P.M. Marrese and G. Marschalkó and D.J. Marshall and J.M. Martín-Fleitas and M. Martino and N. Mary and G. Matijevič and T. Mazeh and P.J. McMillan and S. Messina and A. Mestre and D. Michalik and N.R. Millar and B.M.H. Miranda and D. Molina and R. Molinaro and M. Molinaro and L. Molnár and M. Moniez and P. Montegriffo and D. Monteiro and R. Mor and A. Mora and R. Morbidelli and T. Morel and S. Morgenthaler and T. Morley and D. Morris and A.F. Mulone and T. Muraveva and I. Musella and J. Narbonne and G. Nelemans and L. Nicastro and L. Noval and C. Ordénovic and J. Ordieres-Meré and P. Osborne and C. Pagani and I. Pagano and F. Pailler and H. Palacin and L. Palaversa and P. Parsons and T. Paulsen and M. Pecoraro and R. Pedrosa and H. Pentikäinen and J. Pereira and B. Pichon and A.M. Piersimoni and F.-X. Pineau and E. Plachy and G. Plum and E. Poujoulet and A. Prša and L. Pulone and S. Ragaini and S. Rago and R. N. and M. Ramos-Lerate and P. Ranalli and G. Rauw and S. Read and F. Renk and C. Reylé and R.A. Ribeiro and L. Rimoldini and V. Ripepi and A. Riva and G. Rixon and Roelens and M. Romero-Gómez and N. Rowell and F. Royer and Rudolph and L. Ruiz-Dern and G. Sadowski and T. Sagristà Sellés and J. Sahlmann and J. Salgado and E. Salguero and M. Sarasso and H.  and A. Schnorhk and M. Schultheis and E. Sciacca and M. Segol and J.C. Segovia and D. Segransan and E. Serpell and I-C. Shih and R. Smareglia and R.L. Smart and C. Smith and E. Solano and F. Solitro and R. Sordo and S. Soria Nieto and A. Souchay and F. Spoto and U. Stampa and I.A. Steele and H. Steidelmüller and C.A. Stephenson and H. Stoev and F. Suess and M. Süveges and J. Surdej and L. Szabados and E. Szegedi-Elek and D. Tapiador and F. Taris and G. Tauran and M.B. Taylor and R. Teixeira and D. Terrett and B. Tingley and S.C. Trager and C.  and A. Ulla and E. Utrilla and G. Valentini and A. van Elteren and E. Van Hemelryck and M. van Leeuwen and M. Varadi and A. Vecchiato and J. Veljanoski and T. Via and D. Vicente and S. Vogt and H. Voss and V. Votruba and S. Voutsinas and W. G. and M. Weiler and K. Weingrill and D. Werner and G. Wevers and Ł. Wyrzykowski and A. Yoldas and M. Žerjal and S. Zucker and C. Zurbach and T. Zwitter and A. Alecu and M. Allen and C. Allende Prieto and A. Amorim and A. G. and V. Arsenijevic and S. Azaz and P. Balm and M. Beck and H.-H. Bernstein and L. Bigot and A. Bijaoui and C. Blasco and M. Bonfigli and G. Bono and S. Boudreault and A. Bressan and S. Brown and P.-M. Brunet and P. Bunclark and R. Buonanno and A.G. Butkevich and C. Carret and C. Carrion and L. Chemin and C. F. and L. Corcione and E. Darmigny and K.S. de Boer and P. de Teodoro and P.T. de Zeeuw and C. Delle Luche and C.D. Domingues and P. Dubath and F. Fodor and B. Frézouls and A. Fries and D. Fustes and D. Fyfe and E. Gallardo and J. Gallegos and D. Gardiol and M. Gebran and A. Gomboc and A. Gómez and E. Grux and A. Gueguen and A. Heyrovsky and J. Hoar and G. Iannicola and Y. IsasiParache and A.-M. Janotto and E. Joliet and A. Jonckheere and R. Keil and D.-W. Kim and P. Klagyivik and J. Klar and J. Knude and O. Kochukhov and I. Kolka and J. Kos and A. Kutka and V. Lainey and D. LeBouquin and C. Liu and D. Loreggia and V.V. Makarov and M.G. Marseille and C. Martayan and O. Martinez-Rubi and B. Massart and F. Meynadier and S. Mignot and U. Munari and A.-T. Nguyen and T. Nordlander and P. Ocvirk and K.S. O’Flaherty and A. Olias Sanz and P. Ortiz and J. Osorio and D. Oszkiewicz and A. Ouzounis and M. Palmer and P. Park and E. Pasquato and C. Peltzer and J. Peralta and F. Péturaud and T. Pieniluoma and J. Pigozzi and G. Prat and T. Prod’homme and F. Raison and J.M. Rebordao and D. Risquez and B. Rocca-Volmerange and S. Rosen and M.I. Ruiz-Fuertes and F. Russo and S. Sembay and I. Serraller Vizcaino and A. Short and A. Siebert and H. Silva and D. Sinachopoulos and E. Slezak and M. Soffel and D. Sosnowska and V. Straižys and M. ter Linden and D. Terrell and S. Theil and C. Tiede and L. Troisi and P. Tsalmantza and D. Tur and Vaccari and F. Vachier and P. Valles and W. Van Hamme and L. Veltz and J.  and J.-M. Wallut and R. Wichmann and M.I. Wilkinson and H. Ziaeepour and S. Zschocke",
+  JOURNAL         = "Astronomy \& Astrophysics",
+  NUMBER          = {},
+  TITLE           = "The Gaia mission",
+  VOLUME          = {595},
+  YEAR            = {2016}
+}
