Added intro section for binary systems.

--- a/Introduccion/Subsecciones/VariablesCataclismicas.tex
+++ b/Introduccion/Subsecciones/VariablesCataclismicas.tex
@@ -1,14 +1,16 @@
 \subsection*{Variables Cataclísmicas}
-Las variables cataclísmicas (CVs) son un tipo de sistemas binarios, compuestos
-de una estrella enana blanca y una estrella de secuencia principal. Este tipo de
-sistemas muestran comportamiento variable a lo largo del tiempo, en donde varía
-su luminosidad, espectro emitido, y otras propiedades del sistema. No todas las
-variables cataclísmicas demuestran un comportamiento uniforme; sus periodos de
-intensa actividad y el subsecuente periodo de atenuación pueden variar en su
-duración y su magnitud. El mecanismo que genera esta variación se les conoce
-como \textit{novae}; estos estallidos ocurren debido a la interacción de las
-estrellas dentro del sistema.
-\subsection*{Composición de las CVs}
+\sout{Las variables cataclísmicas (CVs) son un tipo de sistemas binarios, compuestos
+de una estrella enana blanca y una estrella de secuencia principal.}
+% TODO: REMOVE ABOVE
+
+Este tipo de sistemas muestran comportamiento variable a lo largo del tiempo, en
+donde varía su luminosidad, espectro emitido, y otras propiedades del sistema.
+No todas las variables cataclísmicas demuestran un comportamiento uniforme; sus
+periodos de intensa actividad y el subsecuente periodo de atenuación pueden
+variar en su duración y su magnitud. El mecanismo que genera esta variación se
+les conoce como \textit{novae}; estos estallidos ocurren debido a la interacción
+de las estrellas dentro del sistema.
+\subsection*{Composición de las VCs}
 La composición de las estrellas puede variar de un sistema a otro, pero en
 general adhieren a los siguientes parámetros: una estrella enana blanca -
 conocida como la estrella principal - y una estrella de secuencia principal
