--- a/main.tex
+++ b/main.tex
@@ -8,6 +8,7 @@
 \usepackage{caption}
 \usepackage[]{xcolor}
 \usepackage{booktabs, multirow}
+\usepackage[normalem]{ulem}
 \usepackage[colorlinks,linkcolor=black,urlcolor=blue,citecolor=blue]{hyperref}
 \usepackage{natbib}
 \bibliographystyle{apalike}
