Started on White Dwarf section. Added figure and extra citations.

--- a/Introduccion/Subsecciones/SistemasBinarios.tex
+++ b/Introduccion/Subsecciones/SistemasBinarios.tex
@@ -1,12 +1,11 @@
 \subsection*{Sistemas Binarios}
 
-Las variables cataclísmicas (VCs) son un tipo de sistemas binarios. A diferencia
-de nuestro sistema solar, una VC está compuesta de dos distintas estrellas: una
-estrella enana blanca y una estrella de secuencia principal. Dentro de un
-sistema binario ambas estrellas existen en proximidad de una a otra en ordenes
-de unos cuantos UA, comparado con las distancias entre distintos sistemas
-solares cuya magnitud recae en el orden de años luz. Estas estrellas van
-evolucionando juntas desde su formación dentro de una nube molecular común,
+A diferencia de nuestro sistema solar, una VC está compuesta de dos distintas
+estrellas: una estrella enana blanca y una estrella de secuencia principal.
+Dentro de un sistema binario ambas estrellas existen en proximidad de una a otra
+en ordenes de unos cuantos UA, comparado con las distancias entre distintos
+sistemas solares cuya magnitud recae en el orden de años luz. Estas estrellas
+van evolucionando juntas desde su formación dentro de una nube molecular común,
 donde las estrellas nacen. Durante sus primeros momentos de vida se logran
 formar una gran cantidad de estas estrellas; sin embargo la mayoría de las
 estrellas formadas durante esta etapa de tiempo no llegan a la edad vieja,
