--- a/Introduccion/Subsecciones/VariablesCataclismicas.tex
+++ b/Introduccion/Subsecciones/VariablesCataclismicas.tex
@@ -1,7 +1,4 @@
 \subsection*{Variables Cataclísmicas}
-\sout{Las variables cataclísmicas (CVs) son un tipo de sistemas binarios, compuestos
-de una estrella enana blanca y una estrella de secuencia principal.}
-% TODO: REMOVE ABOVE
 
 Este tipo de sistemas muestran comportamiento variable a lo largo del tiempo, en
 donde varía su luminosidad, espectro emitido, y otras propiedades del sistema.
@@ -10,6 +7,8 @@ periodos de intensa actividad y el subsecuente periodo de atenuación pueden
 variar en su duración y su magnitud. El mecanismo que genera esta variación se
 les conoce como \textit{novae}; estos estallidos ocurren debido a la interacción
 de las estrellas dentro del sistema.
+
+\comment{
 \subsection*{Composición de las VCs}
 La composición de las estrellas puede variar de un sistema a otro, pero en
 general adhieren a los siguientes parámetros: una estrella enana blanca -
@@ -55,8 +54,8 @@ magnético de esta misma estrella. \\\newline
 	\centering
 	\includegraphics[scale=0.4]{Introduccion/Figures/Figura Acrecion_SmithReview.png}
 	\caption{Diagrama de una estrella enana blanca absorbiendo material de su
-	compañera estrella de secuencia principal por medio de la interacción de sus
-	lóbulos de Roche.} \cite*{smithReview}
+		compañera estrella de secuencia principal por medio de la interacción de sus
+		lóbulos de Roche.} \citet{smithReview}
 	\label{acrecionSmithReview}
 \end{figure}
 
@@ -70,7 +69,7 @@ mismas propiedades en sus componentes existen diferentes tipos de estallidos:
 Los novae clásicos son aquellos estallidos observados en sistemas binarios que
 causa que su luminosidad aumente por varias magnitudes en una escala de tiempo
 relativamente corta (puede ser en la escala de días hasta meses).
-\cite*{smithReview} Aparte de la radiación generada debido a reacciones
+\citet{smithReview} Aparte de la radiación generada debido a reacciones
 termonucleares, los novae expulsan un entorno de gas caliente a grandes
 velocidades, llegando a miles de kilómetros por segundo. Pocos sistemas binarios
 muestran nova recurrentes a lo largo del tiempo en intervalos de decenas o
@@ -82,3 +81,4 @@ acumula este material aumente su grosor, aumentando la temperatura de la capa.
 Este aumento de temperatura causa que la presión en esta capa alcance un punto
 en donde empiezan a ocurrir reacciones termonucleares de parte del hidrógeno
 presente en esta capa.
+}
