--- a/main.tex
+++ b/main.tex
@@ -25,6 +25,7 @@
 \newcommand{\ig}{\`{\i}}
 \newcommand{\R}{\textsf{R}}
 \newcommand{\Fortran}{\textsf{Fortran}}
+\newcommand{\comment}[1]{}
 %------------------------------------------------------------------------------------
 \definecolor{MyGray}{rgb}{0.30,0.31,0.32} % definizione grigio
 \definecolor{MyDarkBlue}{rgb}{0.,0.08,0.5} % blu scuro
@@ -85,19 +86,11 @@
 \begin{titlepage}
     \begin{center}
         \vspace*{0.2cm}
-        {\fontsize{19pt}{20pt}\selectfont \textbf{Alma Mater Studiorum - Universit{\ag} di Bologna}\par}
+        {\fontsize{19pt}{20pt}\selectfont \textbf{Facultad de Ciencias Físico Matemático - Universidad Autónoma de Nuevo León}\par}
     
         \noindent\hrulefill
-        \vspace{0.8cm}
-        
         \Large
-        
-        Dipartimento di Fisica e Astronomia
-        
-        Corso di Laurea in Astronomia
-        
-        \Large
-        \vspace{5cm}
+        \vspace{6cm}
         {\fontsize{22.5pt}{22.5}\textcolor{MyDarkBlue}{\textbf{Estudio Fotométrico de Variables Cataclísmicas}}}
 
         
