Small advancement in WD section

--- a/Introduccion/Subsecciones/EnanaBlanca.tex
+++ b/Introduccion/Subsecciones/EnanaBlanca.tex
@@ -57,4 +57,9 @@ seguir manteniendo su tasa de fusión nuclear. Una vez que llegue a este punto
 empieza a expulsar las capas exteriores hasta solo dejar el núcleo expuesto,
 ahora inerte debido a la ausencia de fusión nuclear. Este resto de la estrella
 progenitora es lo que se conoce como la \textit{enana blanca}, a pesar de no ser
-una estrella formalmente.
+una estrella formalmente. La composición del material dentro de este objeto es
+distinto al de una estrella de secuencia principal; a pesar de tener como mínimo
+una masa \(\approx 0.30-0.45 M_{\odot}\) su radio en promedio cae dentro del
+mismo orden de magnitud que el radio de la Tierra. \citet*{whiteDwarfsReview}
+Esto implica una densidad inmensa, en donde solo un \textit{gas degenerado de
+Fermi} puede existir en estas condiciones.
