Added approx tilde command. Finished first draft of WD section

--- a/Introduccion/Subsecciones/EnanaBlanca.tex
+++ b/Introduccion/Subsecciones/EnanaBlanca.tex
@@ -59,7 +59,17 @@ ahora inerte debido a la ausencia de fusión nuclear. Este resto de la estrella
 progenitora es lo que se conoce como la \textit{enana blanca}, a pesar de no ser
 una estrella formalmente. La composición del material dentro de este objeto es
 distinto al de una estrella de secuencia principal; a pesar de tener como mínimo
-una masa \(\approx 0.30-0.45 M_{\odot}\) su radio en promedio cae dentro del
-mismo orden de magnitud que el radio de la Tierra. \citet*{whiteDwarfsReview}
-Esto implica una densidad inmensa, en donde solo un \textit{gas degenerado de
-Fermi} puede existir en estas condiciones.
+una masa \textapproxtilde 0.30-0.45 \(M_{\odot}\) su radio en promedio cae
+dentro del mismo orden de magnitud que el radio de la Tierra.
+\citet*{whiteDwarfsReview} Esto implica una densidad inmensa, en donde solo un
+\textit{gas degenerado de Fermi} puede existir en estas condiciones. Un gas
+degenerado surge como consecuencia del \textbf{principio de exclusión de Pauli}:
+dentro de una molécula no pueden existir más de un electrón por cada estado
+cuántico. Es debido a éste fenómeno que las moléculas de una estrella enana
+blanca están acumuladas en un volumen varias ordenes menor comparado con una
+estrella de secuencia principal, en la cual los electrones degenerados les
+permiten a las moléculas almacenar más energía térmica de lo que predicen los
+modelos en un gas no degenerado. Por lo tanto la escala termodinámica de una
+estrella enana blanca puede llegar a ordenes de \textapproxtilde \(10^{10}\)
+años, en la cual su temperatura efectiva podría disminuir de \(100,000 K\) a
+\textapproxtilde \(5,000 K\). \citet*{whiteDwarfsReview}
