Fixed formatting for title page. Fixed section headers and table of contents not having right numbered content

--- a/Introduccion/Subsecciones/VariablesCataclismicas.tex
+++ b/Introduccion/Subsecciones/VariablesCataclismicas.tex
@@ -1,5 +1,9 @@
-\subsection*{Variables Cataclísmicas}
+\section{Variables Cataclísmicas}
 
+\subsection{Historia}
+
+
+\comment{
 Este tipo de sistemas muestran comportamiento variable a lo largo del tiempo, en
 donde varía su luminosidad, espectro emitido, y otras propiedades del sistema.
 No todas las variables cataclísmicas demuestran un comportamiento uniforme; sus
@@ -7,6 +11,7 @@ periodos de intensa actividad y el subsecuente periodo de atenuación pueden
 variar en su duración y su magnitud. El mecanismo que genera esta variación se
 les conoce como \textit{novae}; estos estallidos ocurren debido a la interacción
 de las estrellas dentro del sistema.
+}
 
 \comment{
 \subsection*{Composición de las VCs}
