--- a/main.tex
+++ b/main.tex
@@ -91,9 +91,18 @@
         \vspace*{0.2cm}
         {\fontsize{19pt}{20pt}\selectfont \textbf{Facultad de Ciencias Físico Matemático - Universidad Autónoma de Nuevo León}\par}
     
-        \noindent\hrulefill
+        \noindent
+        \hrulefill
+        \vspace{0.8cm}
+        
         \Large
-        \vspace{6cm}
+        
+        Dipartimento di Fisica e Astronomia
+        
+        Corso di Laurea in Astronomia
+
+        \Large
+        \vspace{5cm}
         {\fontsize{22.5pt}{22.5}\textcolor{MyDarkBlue}{\textbf{Estudio Fotométrico de Variables Cataclísmicas}}}
 
         
@@ -157,7 +166,6 @@
 
 %-------------------------------------REFERENCES
 \chapter*{Agradecimientos}
-\thispagestyle{empty}
 This work has made use of data from the European Space Agency (ESA) mission
 {\it Gaia} (\url{https://www.cosmos.esa.int/gaia}), processed by the {\it Gaia}
 Data Processing and Analysis Consortium (DPAC,
