--- a/Introduccion/Subsecciones/EnanaBlanca.tex
+++ b/Introduccion/Subsecciones/EnanaBlanca.tex
@@ -1,4 +1,4 @@
-\subsection*{Enana Blanca}
+\section{Enana Blanca}
 
 Una estrella nace de una nube molecular interestelar, una región de material
 ubicada en el espacio entre estrellas. Dependiendo de la masa inicial de el
