--- a/Introduccion/Subsecciones/SistemasBinarios.tex
+++ b/Introduccion/Subsecciones/SistemasBinarios.tex
@@ -1,4 +1,4 @@
-\subsection*{Sistemas Binarios}
+\section{Sistemas Binarios}
 
 A diferencia de nuestro sistema solar, una VC está compuesta de dos distintas
 estrellas: una estrella enana blanca y una estrella de secuencia principal.
